--- a/LightBlueV2/LightBlueV2.csproj
+++ b/LightBlueV2/LightBlueV2.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Board.Designer.cs">
       <DependentUpon>Board.cs</DependentUpon>
     </Compile>
+    <Compile Include="Pieces.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Board.resx">
