Adds engine that moves randomly once at the beginning of the game.

--- a/LightBlueV2/LightBlueV2.csproj
+++ b/LightBlueV2/LightBlueV2.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Display.Designer.cs">
       <DependentUpon>Display.cs</DependentUpon>
     </Compile>
+    <Compile Include="Engine.cs" />
     <Compile Include="Game.cs">
       <SubType>Form</SubType>
     </Compile>
